--- a/SampleWebApi/appsettings.json
+++ b/SampleWebApi/appsettings.json
@@ -11,5 +11,12 @@
         "Default": "Warning"
       }
     }
+  },
+  "JwtSettings": {
+    "key": "This*Is&A!Long)Key(For%Creating@A$SymmetricKey",
+    "issuer": "http://localhost:4200",
+    "audience": "PTCUsers",
+    "minutesToExpiration": "100"
+    
   }
 }
